// Copyright 2021 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";

enum ComputeBetaForwardingRuleIPProtocolEnum {
  ComputeBetaForwardingRuleIPProtocolEnumNO_VALUE_DO_NOT_USE = 0;
  ComputeBetaForwardingRuleIPProtocolEnumTCP = 1;
  ComputeBetaForwardingRuleIPProtocolEnumUDP = 2;
  ComputeBetaForwardingRuleIPProtocolEnumESP = 3;
  ComputeBetaForwardingRuleIPProtocolEnumAH = 4;
  ComputeBetaForwardingRuleIPProtocolEnumSCTP = 5;
  ComputeBetaForwardingRuleIPProtocolEnumICMP = 6;
}

enum ComputeBetaForwardingRuleIPVersionEnum {
  ComputeBetaForwardingRuleIPVersionEnumNO_VALUE_DO_NOT_USE = 0;
  ComputeBetaForwardingRuleIPVersionEnumUNSPECIFIED_VERSION = 1;
  ComputeBetaForwardingRuleIPVersionEnumIPV4 = 2;
  ComputeBetaForwardingRuleIPVersionEnumIPV6 = 3;
}

enum ComputeBetaForwardingRuleLoadBalancingSchemeEnum {
  ComputeBetaForwardingRuleLoadBalancingSchemeEnumNO_VALUE_DO_NOT_USE = 0;
  ComputeBetaForwardingRuleLoadBalancingSchemeEnumINVALID = 1;
  ComputeBetaForwardingRuleLoadBalancingSchemeEnumINTERNAL = 2;
  ComputeBetaForwardingRuleLoadBalancingSchemeEnumINTERNAL_MANAGED = 3;
  ComputeBetaForwardingRuleLoadBalancingSchemeEnumINTERNAL_SELF_MANAGED = 4;
  ComputeBetaForwardingRuleLoadBalancingSchemeEnumEXTERNAL = 5;
}

enum ComputeBetaForwardingRuleMetadataFilterFilterMatchCriteriaEnum {
  ComputeBetaForwardingRuleMetadataFilterFilterMatchCriteriaEnumNO_VALUE_DO_NOT_USE = 0;
  ComputeBetaForwardingRuleMetadataFilterFilterMatchCriteriaEnumNOT_SET = 1;
  ComputeBetaForwardingRuleMetadataFilterFilterMatchCriteriaEnumMATCH_ALL = 2;
  ComputeBetaForwardingRuleMetadataFilterFilterMatchCriteriaEnumMATCH_ANY = 3;
}

enum ComputeBetaForwardingRuleNetworkTierEnum {
  ComputeBetaForwardingRuleNetworkTierEnumNO_VALUE_DO_NOT_USE = 0;
  ComputeBetaForwardingRuleNetworkTierEnumPREMIUM = 1;
  ComputeBetaForwardingRuleNetworkTierEnumSTANDARD = 2;
}

message ComputeBetaForwardingRule {
  bool all_ports = 1;
  bool allow_global_access = 2;
  string backend_service = 3;
  string creation_timestamp = 4;
  string description = 5;
  string ip_address = 6;
  ComputeBetaForwardingRuleIPProtocolEnum ip_protocol = 7;
  ComputeBetaForwardingRuleIPVersionEnum ip_version = 8;
  bool is_mirroring_collector = 9;
  ComputeBetaForwardingRuleLoadBalancingSchemeEnum load_balancing_scheme = 10;
  repeated ComputeBetaForwardingRuleMetadataFilter metadata_filter = 11;
  string name = 12;
  string network = 13;
  ComputeBetaForwardingRuleNetworkTierEnum network_tier = 14;
  string port_range = 15;
  repeated string ports = 16;
  string region = 17;
  string self_link = 18;
  string service_label = 19;
  string service_name = 20;
  string subnetwork = 21;
  string target = 22;
  string project = 23;
  string location = 24;
}

message ComputeBetaForwardingRuleMetadataFilter {
  ComputeBetaForwardingRuleMetadataFilterFilterMatchCriteriaEnum filter_match_criteria = 1;
  repeated ComputeBetaForwardingRuleMetadataFilterFilterLabel filter_label = 2;
}

message ComputeBetaForwardingRuleMetadataFilterFilterLabel {
  string name = 1;
  string value = 2;
}

message ApplyComputeBetaForwardingRuleRequest {
  ComputeBetaForwardingRule resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteComputeBetaForwardingRuleRequest {
  string service_account_file = 1;
  ComputeBetaForwardingRule resource = 2;
}

message ListComputeBetaForwardingRuleRequest {
  string service_account_file = 1;
  string Project = 2;
  string Location = 3;
}

message ListComputeBetaForwardingRuleResponse {
  repeated ComputeBetaForwardingRule items = 1;
}

service ComputeBetaForwardingRuleService {
  rpc ApplyComputeBetaForwardingRule(ApplyComputeBetaForwardingRuleRequest) returns (ComputeBetaForwardingRule);
  rpc DeleteComputeBetaForwardingRule(DeleteComputeBetaForwardingRuleRequest) returns (google.protobuf.Empty);
  rpc ListComputeBetaForwardingRule(ListComputeBetaForwardingRuleRequest) returns (ListComputeBetaForwardingRuleResponse);
}
